--- a/dnn/Examples/EpsGraph_Demo/DNNDemo.vcxproj
+++ b/dnn/Examples/EpsGraph_Demo/DNNDemo.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>MFCProj</Keyword>
     <RootNamespace>DNNDemo</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>EpsGraph_Demo</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
