--- a/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj
+++ b/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj
@@ -127,30 +127,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\C_Subidivision\DCEL\DCEL.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\DCEL_IO.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\DCEL_operation.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\Edge.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\n_d_Point.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\Point.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\Polygon.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\PolygonalDomain.cpp" />
-    <ClCompile Include="..\C_Subidivision\DCEL\Vector.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\DCEL.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\DCEL_IO.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\DCEL_operation.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Edge.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\metrics.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\n_d_Point.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Point.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Polygon.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\PolygonalDomain.cpp" />
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Vector.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Space.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\C_Subidivision\DCEL\AVLTree.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\DCEL.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\DCEL_IO.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\DCEL_operation.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\Edge.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\metrics.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\n_d_Point.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\Point.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\Polygon.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\PolygonalDomain.h" />
-    <ClInclude Include="..\C_Subidivision\DCEL\Vector.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\AVLTree.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\DCEL.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\DCEL_IO.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\DCEL_operation.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Edge.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Graph.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\metrics.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\n_d_Point.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Point.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Polygon.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\PolygonalDomain.h" />
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Vector.h" />
     <ClInclude Include="Space.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
