--- a/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj.filters
+++ b/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj.filters
@@ -14,83 +14,89 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="소스 파일\DCEL">
-      <UniqueIdentifier>{3caf9ccf-4e2e-43fd-9608-77f71e865eb2}</UniqueIdentifier>
+      <UniqueIdentifier>{a95e6fa4-6b98-43fa-af0a-107740103a26}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\DCEL.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\DCEL_IO.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\DCEL_operation.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\Edge.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\n_d_Point.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\Point.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\Polygon.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\PolygonalDomain.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\C_Subidivision\DCEL\Vector.cpp">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClCompile>
     <ClCompile Include="Space.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\DCEL.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\DCEL_IO.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\DCEL_operation.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Edge.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\metrics.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\n_d_Point.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Point.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Polygon.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\PolygonalDomain.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ENN\C_Subidivision\DCEL\Vector.cpp">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\C_Subidivision\DCEL\DCEL.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\AVLTree.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\DCEL_IO.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\DCEL_operation.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\Edge.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\metrics.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\n_d_Point.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\Point.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\Polygon.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\PolygonalDomain.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\C_Subidivision\DCEL\Vector.h">
-      <Filter>소스 파일\DCEL</Filter>
-    </ClInclude>
     <ClInclude Include="Space.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
       <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\AVLTree.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\DCEL.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\DCEL_IO.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\DCEL_operation.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Edge.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Graph.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\metrics.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\n_d_Point.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Point.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Polygon.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\PolygonalDomain.h">
+      <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ENN\C_Subidivision\DCEL\Vector.h">
+      <Filter>소스 파일\DCEL</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
