Finishing constructing visibility graph

--- a/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj
+++ b/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="..\ENN\C_Subidivision\DCEL\Polygon.cpp" />
     <ClCompile Include="..\ENN\C_Subidivision\DCEL\PolygonalDomain.cpp" />
     <ClCompile Include="..\ENN\C_Subidivision\DCEL\Vector.cpp" />
+    <ClCompile Include="AVLTreeList.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Space.cpp" />
   </ItemGroup>
@@ -153,6 +154,7 @@
     <ClInclude Include="..\ENN\C_Subidivision\DCEL\Polygon.h" />
     <ClInclude Include="..\ENN\C_Subidivision\DCEL\PolygonalDomain.h" />
     <ClInclude Include="..\ENN\C_Subidivision\DCEL\Vector.h" />
+    <ClInclude Include="AVLTreeList.h" />
     <ClInclude Include="Space.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
