--- a/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj.filters
+++ b/dnn/NearestNeighbor/ENN_v2/ENN_Demo.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="..\ENN\C_Subidivision\DCEL\Vector.cpp">
       <Filter>소스 파일\DCEL</Filter>
     </ClCompile>
+    <ClCompile Include="AVLTreeList.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Space.h">
@@ -97,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="..\ENN\C_Subidivision\DCEL\Vector.h">
       <Filter>소스 파일\DCEL</Filter>
+    </ClInclude>
+    <ClInclude Include="AVLTreeList.h">
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
