--- a/dnn/NearestNeighbor/ENN_v2/ENN_Demo/ENN_Demo/ENN_Demo.vcxproj
+++ b/dnn/NearestNeighbor/ENN_v2/ENN_Demo/ENN_Demo/ENN_Demo.vcxproj
@@ -236,6 +236,9 @@
   <ItemGroup>
     <None Include="res\ENNDemo.rc2" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\..\..\testfile.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
