--- a/dnn/NearestNeighbor/EpsGraphnD/algorithm/EpsGraphnD.vcxproj.filters
+++ b/dnn/NearestNeighbor/EpsGraphnD/algorithm/EpsGraphnD.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="quadtree.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Macro.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Point.cpp">
