--- a/dnn/NearestNeighbor/EpsGraphnD/algorithm/EpsGraphnD.vcxproj.filters
+++ b/dnn/NearestNeighbor/EpsGraphnD/algorithm/EpsGraphnD.vcxproj.filters
@@ -110,13 +110,13 @@
     <ClCompile Include="EpsGraphnD.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="KDtree.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="quadtree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
