--- a/dnn/NearestNeighbor/EpsGraphnD/algorithm/EpsGraphnD.vcxproj.filters
+++ b/dnn/NearestNeighbor/EpsGraphnD/algorithm/EpsGraphnD.vcxproj.filters
@@ -101,7 +101,13 @@
     <ClCompile Include="EpsGraphnD.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="main2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CPolytope.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CPolytope.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
