:arrow_up:Add a data generation file.

--- a/dnn/NearestNeighbor/BoxNN_L2/Project1/BoxNN_L2.vcxproj
+++ b/dnn/NearestNeighbor/BoxNN_L2/Project1/BoxNN_L2.vcxproj
@@ -20,8 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="data_gen.h" />
     <ClInclude Include="point.h" />
     <ClInclude Include="Space.h" />
+    <ClInclude Include="Space_IO.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp" />
